--- a/scss/myStyle.scss
+++ b/scss/myStyle.scss
@@ -11,6 +11,7 @@
     padding: 2rem 0;
     // background-color: aqua;
     height: 100vh;
+    max-width: 700px;
 
         h1{
             text-align: center;
