--- a/scss/myStyle.scss
+++ b/scss/myStyle.scss
@@ -4,14 +4,12 @@
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: cursive ;
 }
 
 .wrapper{
     padding: 2rem 0;
-    // background-color: aqua;
     height: 100vh;
-    max-width: 700px;
 
         h1{
             text-align: center;
@@ -19,8 +17,11 @@
         }
         
         .calculator-container{
-            width: 25%;
-            margin: 25px auto;
+            display: flex;
+            flex-direction: column;
+            flex: 1;
+            max-width: 400px;
+            margin: 2rem auto;
             box-shadow: 0 0 20px 0px #000;
             font-size: 20px;
             border-radius: 10px;
