--- a/scss/myStyle.scss
+++ b/scss/myStyle.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
-    font-family: cursive ;
+    font-family: Arial, Helvetica, sans-serif ;
 }
 
 .wrapper{
